--- a/user_therapist/profile_complaint_detail.html
+++ b/user_therapist/profile_complaint_detail.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Detail Request Inventory | Therapist Fabulash</title>
+		<title>Complaint Details | Therapist Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -132,14 +132,22 @@ License: You must have a valid license purchased only from themeforest(the above
 								        <rect fill="#000000" opacity="0.3" x="10" y="17" width="7" height="2" rx="1"/>
 								    </g>
 								</svg></span><span class="kt-menu__link-text">List Treatment</span></a></li>
-								<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/inventory.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 										<rect id="bound" x="0" y="0" width="24" height="24" />
 										<path d="M4,9.67471899 L10.880262,13.6470401 C10.9543486,13.689814 11.0320333,13.7207107 11.1111111,13.740321 L11.1111111,21.4444444 L4.49070127,17.526473 C4.18655139,17.3464765 4,17.0193034 4,16.6658832 L4,9.67471899 Z M20,9.56911707 L20,16.6658832 C20,17.0193034 19.8134486,17.3464765 19.5092987,17.526473 L12.8888889,21.4444444 L12.8888889,13.6728275 C12.9050191,13.6647696 12.9210067,13.6561758 12.9368301,13.6470401 L20,9.56911707 Z" id="Combined-Shape" fill="#000000" />
 										<path d="M4.21611835,7.74669402 C4.30015839,7.64056877 4.40623188,7.55087574 4.5299008,7.48500698 L11.5299008,3.75665466 C11.8237589,3.60013944 12.1762411,3.60013944 12.4700992,3.75665466 L19.4700992,7.48500698 C19.5654307,7.53578262 19.6503066,7.60071528 19.7226939,7.67641889 L12.0479413,12.1074394 C11.9974761,12.1365754 11.9509488,12.1699127 11.9085461,12.2067543 C11.8661433,12.1699127 11.819616,12.1365754 11.7691509,12.1074394 L4.21611835,7.74669402 Z" id="Path" fill="#000000" opacity="0.3" />
 									</g>
-								</svg></span><span class="kt-menu__link-text">Inventory</span></a></li>
-								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								</svg></span><span class="kt-menu__link-text">Inventory</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
+									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
+										<ul class="kt-menu__subnav">
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/inventory_stock.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Stock</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/inventory_request.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request Inventory</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/inventory_pemakaian.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pemakaian Inventory</span></a></li>
+										</ul>
+									</div>
+								</li>
+								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
 								        <path d="M12,11 C9.790861,11 8,9.209139 8,7 C8,4.790861 9.790861,3 12,3 C14.209139,3 16,4.790861 16,7 C16,9.209139 14.209139,11 12,11 Z" id="Mask" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -150,7 +158,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/profile_biodata.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Biodata</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/profile_kehadiran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Kehadiran</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/profile_complaint.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Complaint</span></a></li>
+											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/profile_complaint.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Complaint</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/profile_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Payroll</span></a></li>
 										</ul>
 									</div>
@@ -268,17 +276,20 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content">
 
 						<!-- begin:: Content Head -->
-						<div class="kt-subheader  kt-grid__item" id="kt_subheader">
+                        <div class="kt-subheader  kt-grid__item" id="kt_subheader">
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Inventory </h3>
+										Profile </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_therapist/inventory.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_therapist/profile_complaint.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_therapist/inventory_detail_request.html" class="kt-subheader__breadcrumbs-link">
-											Detail request </a>
+										<a href="user_therapist/profile_complaint.html" class="kt-subheader__breadcrumbs-link">
+											Complaint </a>
+										<span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_therapist/profile_complaint_detail.html" class="kt-subheader__breadcrumbs-link">
+											Detail complaint </a>
 									</div>
 								</div>
 							</div>
@@ -287,82 +298,58 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- end:: Content Head -->
 
 						<!-- begin:: Content -->
-
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
                             <div class="row justify-content-center">
 
-								<div class="col-12">
+								<div class="col-lg-8 col-xl-6">
 
-                                    <!--begin::Portlet-->
-									<div class="kt-portlet">
-										<div class="kt-portlet__head">
+									<!--begin::Portlet-->
+									<div class="kt-portlet kt-portlet--mobile" id="print-section">
+										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
-												<span class="kt-portlet__head-icon">
-													<i class="flaticon2-cube-1"></i>
-												</span>
 												<h3 class="kt-portlet__head-title">
-													Detail Request
+													Treatment Details
 												</h3>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <div class="row" style="margin-bottom: 50px;">
-                                                <h5 class="col-12 color-main-dark" name="kode_request" style="margin-bottom: 20px;">#123456</h5>
+											<div class="row" style="margin-bottom:20px;">
+												<div class="col-6">
+													<h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
+													<a href="user_admin/customer_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
+												</div>
+											</div>
+											<table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
+												<tr>
+													<th width="30%">Tanggal</th>
+													<th width="10%">:</th>
+													<th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
+												</tr>
+											</table>
+											<table class="table table-bordered table-hover table-checkable" id="table_spk_complaint"></table>
+											<div class="row" style="margin-top:50px;">
 												<div class="col-6" style="padding-right:0px;">
-	                                                <span class="kt-font-bold">Date Request : <span name="date_request">15 November 2019</span></span>
+													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
+														<tr>
+															<th width="35%">Waktu Mulai</th>
+															<th width="10%">:</th>
+															<th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+														</tr>
+														<tr>
+															<th>Waktu Selesai</th>
+															<th>:</th>
+															<th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
+														</tr>
+													</table>
 												</div>
 												<div class="col-6" style="padding-left:0px;text-align:right;">
-	                                                <span class="kt-font-bold">Date Approve : <span name="date_approve">-</span></span>
+													<span class="kt-font-bold">Tipe Complaint :</span>&nbsp;<br>
+													<span name="complaint_tipe">Eyelash Extension</span>&nbsp;<br>
+													<span class="kt-font-bold">Complaint :</span>&nbsp;<br>
+													<span name="complaint_text" style="word-wrap: break-word">nama saya fiqar aprialim, saya tidak terima dengan treatment yang diberikan untuk kuku dan bulu mata saya</span>&nbsp;<br>
 												</div>
-                                            </div>
-                                            <table class="table table-bordered table-hover well-align-table" role="grid">
-                                                <thead>
-                                                    <tr role="row">
-                                                        <th style="width: 5%">No</th>
-                                                        <th style="width: 15%">Alat/Bahan</th>
-                                                        <th style="width: 25%">Barang</th>
-                                                        <th style="width: 15%">Satuan</th>
-                                                        <th style="width: 12.5%">Request</th>
-                                                        <th style="width: 12.5%">Disetujui</th>
-                                                        <th style="width: 15%">Upload Foto</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody id="item_list">
-                                                    <tr role="row">
-                                                        <td>1</td>
-                                                        <td class="text-center">
-                                                            <select class="form-control" name="request_type" disabled>
-        														<option>Alat</option>
-        														<option>Bahan</option>
-        													</select>
-                                                        </td>
-														<td class="text-center">
-                                                            <select class="form-control" name="request_barang" disabled>
-        														<option>Eyelash Size 12</option>
-        														<option>Eyelash Size 12</option>
-        														<option>Eyelash Size 12</option>
-        													</select>
-                                                        </td>
-														<td class="text-center">
-                                                            <select class="form-control" name="request_satuan" disabled>
-        														<option>Box</option>
-        														<option>Box</option>
-        														<option>Box</option>
-        													</select>
-                                                        </td>
-                                                        <td class="text-center">
-                                                            <input type="number" class="form-control" name="request_jumlah_request" value="5" readonly>
-                                                        </td>
-                                                        <td class="text-center">
-                                                            <input type="number" class="form-control" name="request_jumlah_disetujui" value="" readonly>
-                                                        </td>
-                                                        <td class="text-center">
-                                                            <label for="request_foto"  class="btn btn-link" style="padding:0px;"><i class="flaticon2-photo-camera"></i>Preview</label>
-                                                        </td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
+											</div>
 										</div>
 									</div>
 
@@ -446,63 +433,6 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/datatable_therapist.js"></script>
-		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
-
-        <script>
-            //Tambah item
-            $('#item_add').click(function() {
-				document.querySelector('#item_list').insertAdjacentHTML (
-					'beforeend',
-					`<tr role="row">
-                        <td tabindex="0">1</td>
-                        <td class="text-center">
-                            <select class="form-control">
-                                <option>Alat</option>
-                                <option>Bahan</option>
-                            </select>
-                        </td>
-                        <td class="text-center">
-                            <select class="form-control">
-                                <option>Eyelash Size 12</option>
-                                <option>Eyelash Size 12</option>
-                                <option>Eyelash Size 12</option>
-                            </select>
-                        </td>
-                        <td class="text-center">
-                            <select class="form-control">
-                                <option>Box</option>
-                                <option>Box</option>
-                                <option>Box</option>
-                            </select>
-                        </td>
-                        <td class="text-center">
-                            <input type="number" class="form-control">
-                        </td>
-                        <td class="text-center">
-                            <input type="number" class="form-control">
-                        </td>
-                        <td class="text-center">
-                            <input type="file" style="display: none; width:0; height: 0" accept="image/*" id="request_foto">
-                            <label for="request_foto"  class="btn btn-link" style="padding:0px;"><i class="flaticon2-photo-camera"></i>Foto</label>
-                        </td>
-                    </tr>`
-				)
-			});
-
-            //Sweetalert
-            $('#kt_sweetalert_request_berhasil').click(function(e) {
-				swal.fire({
-					title: "Berhasil",
-					text: "Request berhasil dilakukan",
-					type: "success",
-					confirmButtonText: "Ok",
-					confirmButtonClass: "btn btn-brand"
-				}).then(function(result) {
-					// location.reload();
-				});
-			});
-
-        </script>
 
 		<!--end::Page Scripts -->
 	</body>
